[project]
name = "epyflu"
version = "0.1.0"
description = "Upload to GISAID, record in local sqlite3 db, 
search/download GISAID to update released in local db"
authors = [
    { name = "j3551ca", email = "jessica.caleta@phac-aspc.gc.ca" },
]
dependencies = [
    "gisflu>=0.1.9",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2"
]
requires-python = ">=3.12"
readme = "README.md"

[project.urls]
Docs = "https://github.com/j3551ca/epyflu"
Github = "https://github.com/j3551ca/epyflu"
Issues = "https://github.com/j3551ca/epyflu/issues"

[project.scripts]
epyflu = "epyflu.cli:main"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"