[project]
name = "epyflu"
version = "0.1.3"
description = "Upload to GISAID, record in local sqlite3 db, search/download GISAID to update released in local db"
authors = [
    { name = "j3551ca", email = "jessica.caleta@phac-aspc.gc.ca" },
]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Docs = "https://github.com/j3551ca/epyflu"
Github = "https://github.com/j3551ca/epyflu"
Issues = "https://github.com/j3551ca/epyflu/issues"

[project.scripts]
epyflu = "epyflu.cli:main"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
packages = ["epyflu"]

[tool.pdm.dependencies]
pandas = ">=2.2.2"
gisflu = { git = "https://github.com/j3551ca/gisflu.git", rev = "master" }
[tool.pdm.dev-dependencies]
dev = [
    "twine>=5.1.1",
]
