[project]
name = "epyflu"
dynamic = ["version"]
description = "Upload to GISAID, record in local sqlite3 db, search/download GISAID to update released in local db"
authors = [
    { name = "j3551ca", email = "jessica.caleta@phac-aspc.gc.ca" },
]
requires-python = ">=3.10"
dependencies=[
    "pandas>=2.2.2",
    "gisflu @ git+https://github.com/j3551ca/gisflu.git@master",
]
readme = "README.md"
keywords = ["upload", "cli", "download", "sqlite", "flu"]

[project.urls]
Docs = "https://github.com/j3551ca/epyflu"
Github = "https://github.com/j3551ca/epyflu"
Issues = "https://github.com/j3551ca/epyflu/issues"

[project.scripts]
epyflu = "epyflu.cli:main"

[project.license]
text = "MIT"

[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/epyflu/_version.py"